<resources>
    <string name="app_name">MeetX</string>
    <string name="this_is_the_new_app">This is the new App!</string>
    <string name="myButton">Button</string>
    <string name="About">A platform for connecting dots over the world.</string>
    <string name="Next">Next</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="lastName">Last Name</string>
    <string name="login_name">Sign in</string>
    <string name="register_name">Sign up</string>
    <string name="wlc_sign_in">Welcome back, sign in</string>
    <string name="wlc_sign_up">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="phone">Mobile no.</string>
    <string name="password">Password</string>
    <string name="already_member">Already have an account, Sign in</string>
    <string name="dont_have">Don\'t have an account, Sign up</string>
    <string name="username">Username</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="need_an_account">Need an account?</string>
    <string name="app_logo">app logo</string>
    <string name="logout_button">Logout button</string>
    <string name="send_otp">Get OTP</string>
    <string name="cancel">Cancel</string>
    <string name="verification">Verification_check</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_email">Verify email</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="re_enter_your_new_password">Re-Enter your password</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm password\n</string>
    <string name="new_password_text">New password\n</string>
    <string name="new_password">Enter your new password</string>
    <string name="change_password">Change Password</string>
</resources>