<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.changePassword.reEnterPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/change_password"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/change_password"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/newPasswordText"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"

            android:text="@string/new_password_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/newPassword"
                android:layout_width="240dp"
                android:textSize="15sp"
                android:layout_height="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/eye_icon1"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/hide_eye" />

            <ImageView
                android:id="@+id/verification_check1"
                android:layout_width="7dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/verification"
                android:visibility="invisible"
                app:srcCompat="@drawable/checksymbol" />
        </LinearLayout>

        <TextView
            android:id="@+id/confirmPasswordText"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"

            android:text="@string/confirm_password"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"

            android:orientation="horizontal">


            <EditText
                android:id="@+id/cnfPasword"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:textSize="15sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/re_enter_your_new_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/eye_icon2"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/hide_eye" />

            <ImageView
                android:id="@+id/verification_check2"
                android:layout_width="7dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/verification"
                android:visibility="invisible"
                app:srcCompat="@drawable/checksymbol" />

        </LinearLayout>

        <Button
            android:id="@+id/submitPassword"
            android:layout_marginTop="40dp"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/submit" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>