<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Login_page">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/key" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/baseline_email_24" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/baseline_lock_24" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/eye_icon"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/hide_eye" />
        </LinearLayout>
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >

            <CheckBox
                android:id="@+id/remember_box"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/remember_me"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/forgotpassword"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#0080cf"
                android:text="@string/forgot_password"
                 />
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/Login" />

        <LinearLayout
            android:id="@+id/accountSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/needAccount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/need_an_account"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/signupLogin"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/register_name"
                android:textColor="#0080cf" />
        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>