<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/otp_dialog"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/enterOTPVerification"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_otp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.chaos.view.PinView
            android:id="@+id/pinview"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:cursorVisible="false"
            android:gravity="center"
            android:inputType="number"
            android:itemBackground="@color/white"
            app:hideLineWhenFilled="false"
            app:itemCount="4"
            app:itemHeight="50dp"
            app:itemRadius="15dp"
            app:itemWidth="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="00:00"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/verfyOTP"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/verify" />

        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/resend_otp"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_close_OTP"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/otp_dialog"
        android:layout_alignEnd="@+id/otp_dialog"

        android:background="@drawable/close" />

</RelativeLayout>